--- a/fdd.html
+++ b/fdd.html
@@ -27,7 +27,7 @@
 <body>
     <select name="font" id="font">
         <!-- <option value="">--choose a font to preview--</option> -->
-        <optgroup label="--choose a font to preview--">
+        <optgroup label="Choose a font to preview:">
         <option value="Neue Haas Grotesk Text Pro">Neue Haas Grotesk</option>
         <option value="SuisseIntl-Regular">Suisse Intl</option>
         <option value="Sneak-Regular">Sneak</option>
@@ -38,7 +38,7 @@
     <!-- <div style="justify-content: space-between; display: flex;"><a href="">twitter</a> <a href="">instagram</a> <a href="">youtube</a> <a href="">email</a></div> -->
     <p style="font-size: xx-large;">Lorem ipsum</p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, rerum? Ratione eos repudiandae molestias ullam pariatur perferendis praesentium nostrum rem maxime odio reprehenderit labore ab sunt, neque eum aliquam error delectus tenetur est aliquid id, unde impedit! Id quis tempore quaerat repellat, vel sapiente voluptatibus asperiores consequatur. Voluptatum quo dolor quidem, vel, recusandae officia debitis aliquam harum, assumenda repudiandae doloribus! At explicabo voluptatibus ipsam temporibus, aspernatur illum? Magnam voluptate repudiandae facere velit, ratione provident magni adipisci non voluptates dolore rem qui, obcaecati natus rerum. Amet, repellat pariatur minima id deleniti quos ab iusto officia asperiores blanditiis quo, obcaecati dolore maiores. Beatae saepe laudantium, iste sapiente quam sint dolorum velit illum ex aspernatur ipsum hic deserunt quo ullam esse qui libero reiciendis recusandae, pariatur cupiditate maxime laborum ducimus! Quia, aliquid. Labore natus quas, veniam omnis aliquid odio, nisi qui cumque modi explicabo, officia quae esse sequi illum numquam nam beatae quia corrupti sunt. Placeat consequuntur perferendis, ex quisquam aut ducimus laudantium earum quaerat corporis dicta animi aliquid repellendus adipisci dolor alias! Minus accusamus placeat illum quam. Possimus magnam eveniet at officia ipsam provident maiores atque, fugiat cumque rem. Distinctio velit fugit nesciunt ratione tempore temporibus ut doloribus vero exercitationem, nisi commodi dolore praesentium iusto neque totam quis accusantium voluptatem mollitia cupiditate? Delectus eos deleniti quam expedita architecto excepturi sed earum quis dolorem similique explicabo debitis optio obcaecati minus aut dolor accusantium, sunt nulla et voluptatem doloremque fugiat reprehenderit eaque nihil? Dolores facere hic reprehenderit, officia eos iste laboriosam, magnam obcaecati assumenda voluptatum odit cumque impedit optio incidunt sequi suscipit dolore. Ipsum aspernatur libero distinctio at iusto impedit dolorem vero molestiae cumque. Doloribus, laboriosam nam! Dolor reprehenderit, corrupti laudantium doloribus commodi a sed modi esse dolorem vero cupiditate vel sunt distinctio quidem nobis facilis ab eos quae voluptatum iusto tempora, fuga minima?
-    <br><p style="text-align: center;"><a style="color:inherit; font-family: Sneak-Regular; " href="javascript:scroll(0,0)">&uarr; TOP</a></p>
+    <!-- <br><p style="text-align: center;"><a style="color:inherit; font-family: Sneak-Regular; " href="javascript:scroll(0,0)">&uarr; TOP</a></p> -->
 </body>
 <script>
     document.getElementById("font").addEventListener("change", function() {
