--- a/sm.html
+++ b/sm.html
@@ -183,10 +183,10 @@ details >a {
     <details open>
         <summary ><a href="https://iqae.github.io">iqae.github.io</a></summary>
         </details> -->
-<pre style="font-family:'Courier Prime', monospace; width: 90vw; overflow-x: hidden; margin-bottom: -12px;">
+<pre translate="no" style="font-family:'Courier Prime', monospace; width: 90vw; overflow-x: hidden; margin-bottom: -12px;">
 /
-</pre>
-<pre style="font-family:'Courier Prime', monospace; width: 90vw; overflow-x: hidden;">
+</pre >
+<pre translate="no" style="font-family:'Courier Prime', monospace; width: 90vw; overflow-x: hidden;">
 ├── <a href="https://uygnil.com">uygnil.com</a>
 ├── <a href="https://zhoulingyu.net">zhoulingyu.net</a>
 │   ├── <a href="https://blog.zhoulingyu.net">blog.zhoulingyu.net</a>
@@ -203,8 +203,7 @@ details >a {
 ├── <a  href="https://zlybox.eu.org">zlybox.eu.org</a> 
 ├── <a class="tooltip" href="https://zlybox.com">zlybox.com</a> 
 └ ─ <a class="ne" style="text-decoration: line-through;" >zly1.com</a>
-<!-- <a href="#" class="tooltip">(!)</a> -->
-<!-- ¦__ <a class="ne" >zly1.com</a> -->
+
 </pre>
 
 </body>
@@ -217,7 +216,6 @@ details >a {
     </div>
     <div  style="display: inline-block;">
         <!-- <b>EN</b>/<a href="simple.cn.html">CN</a>/<a href="simple.kr.html">KR</a> -->
-        
     </div>
     </div>
     </footer>
