--- a/fontcss.html
+++ b/fontcss.html
@@ -7,49 +7,50 @@
 <link rel="stylesheet" href="https://xolyn.github.io/font.css">
 <style>
 h1,h2,h3,h4{margin: 1% 0% 1%;}
-        table, th, td {
-  border: 1px solid black;
-  border-collapse: collapse;
+
+table, th, td {
+border: 1px solid black;
+border-collapse: collapse;
 }
-    pre{
-        overflow-x: auto;
-        /* border: 1.5px grey solid; */
-        background-color: lightgray;
-        margin: 0px;
-        overflow-y: hidden;
-    }
-    /* pre::before{
-        content: "HTML";
-        color:darkcyan;
-        display: block; 
-    } */
+pre{
+    overflow-x: auto;
+    /* border: 1.5px grey solid; */
+    background-color: lightgray;
+    margin: 0px;
+    overflow-y: hidden;
+}
+/* pre::before{
+    content: "HTML";
+    color:darkcyan;
+    display: block; 
+} */
 
-    .cb{
-       border: grey 1px solid; 
-       /* padding-left: 2px; */
-    }
+.cb{
+    border: grey 1px solid; 
+    /* padding-left: 2px; */
+}
 
-    .cb::before{
-        content: "‎ HTML";
-        color:darkcyan;
-        display: contents;
-        font-family: monospace;
-    }
+.cb::before{
+    content: "‎ HTML";
+    color:darkcyan;
+    display: contents;
+    font-family: monospace;
+}
 
-    svg:hover{
-        box-shadow: 0px 4px 10px rgba(0, 0, 0,0.2);
-    }
+/* svg:hover{
+    box-shadow: 0px 4px 10px rgba(0, 0, 0,0.2);
+} */
 
-    details>summary{
-        cursor:pointer;
-    }
+details>summary{
+    cursor:pointer;
+}
 
-    code{
-        cursor: pointer;
-    }
+code{
+    cursor: pointer;
+}
 
-    code,pre{font-family: monospace;}
-    </style>
+code,pre{font-family: monospace;}
+</style>
 
     <script>
         const csstxt='<link rel="stylesheet" href="https://xolyn.github.io/font.css">'
@@ -59,7 +60,7 @@ h1,h2,h3,h4{margin: 1% 0% 1%;}
 
 <h1 style="font-weight: normal;">Welcome to use my font css</h1>
 <details>
-    <summary>Usage Notice</summary>
+    <summary ><span style="color:red; font-size: 1.5rem;">Usage Notice</span></summary>
     Please be aware that these fonts are intended for personal and non-commercial use only. By importing and using our CSS file, you agree not to use these fonts for any commercial purposes. Unauthorized commercial use of these fonts is strictly prohibited. If you choose to use these fonts for commercial purposes, you do so at your own risk and will bear full responsibility for any consequences that may arise.
 <br>
 To ensure compliance with these terms, our fonts are licensed under the 
