--- a/fontcss.html
+++ b/fontcss.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>fonts repo</title>
+<!-- <link rel="stylesheet" href="font.css"> -->
 <link rel="stylesheet" href="https://xolyn.github.io/font.css">
+
 <style>
 h1,h2,h3,h4{margin: 1% 0% 1%;}
 
@@ -96,103 +98,135 @@ width="12.5px" height="12.5px" viewBox="0 0 512 512" version="1.1" xmlns="http:/
 Then refer to the preview below for your preferred fonts and use corresponding alias. You can click on names to copy.
 
 <div style="overflow-x: auto">
-<table translate="no" style="width: 100%; font-size: small; ">
+  <table style="width: 100%; font-size: small;">
     <tr>
       <th><samp>font-family:</samp></th>
       <th>preview</th>
     </tr>
   
     <tr>
-      <td><code onclick="copyTab(this)">BDLifelessGrotesk_Variable</code></td>
-      <td><span style="font-family:BDLifelessGrotesk_Variable; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><code onclick="copyTab(this)">BDLifelessGrotesk</code></td>
+      <td><span style="font-family:BDLifelessGrotesk;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">CascadiaMono-Regular</code></td>
-      <td><span style="font-family:CascadiaMono-Regular; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:CascadiaMono-Regular;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">cour</code></td>
-      <td><span style="font-family:cour; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:cour;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">CourierPrime-Regular</code></td>
-      <td><span style="font-family:CourierPrime-Regular; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:CourierPrime-Regular;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
-    <tr>
+    <!-- <tr>
       <td><code onclick="copyTab(this)">dtb</code></td>
-      <td><span style="font-family:dtb; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:dtb;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
-  
+   -->
     <tr>
       <td><code onclick="copyTab(this)">ere</code></td>
-      <td><span style="font-family:ere; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:ere;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">Erewhon-Bold</code></td>
-      <td><span style="font-family:Erewhon-Bold; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:Erewhon-Bold;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">iom</code></td>
-      <td><span style="font-family:iom; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:iom;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">Monolisa Font</code></td>
-      <td><span style="font-family:Monolisa Font; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:Monolisa Font;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">Neue Kaine Variable</code></td>
-      <td><span style="font-family:Neue Kaine Variable; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:Neue Kaine Variable;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">Neue Regrade Bold</code></td>
-      <td><span style="font-family:Neue Regrade Bold; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:Neue Regrade Bold;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">Neue Regrade Medium</code></td>
-      <td><span style="font-family:Neue Regrade Medium; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:Neue Regrade Medium;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">nhm</code></td>
-      <td><span style="font-family:nhm; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:nhm;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">nhr</code></td>
-      <td><span style="font-family:nhr; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:nhr;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">sf-round</code></td>
-      <td><span style="font-family:sf-round; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:sf-round;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
+      <td><code onclick="copyTab(this)">sf_b</code></td>
+      <td><span style="font-family:sf_b;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+    </tr>
+  
+    <tr>
+      <td><code onclick="copyTab(this)">sf_l</code></td>
+      <td><span style="font-family:sf_l;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+    </tr>
+  
+    <tr>
+      <td><code onclick="copyTab(this)">sf_r</code></td>
+      <td><span style="font-family:sf_r;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+    </tr>
+  
+    <tr>
+      <td><code onclick="copyTab(this)">diag_r</code></td>
+      <td><span style="font-family:diag_r;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+    </tr>
+
+    <tr>
+      <td><code onclick="copyTab(this)">diag_b</code></td>
+      <td><span style="font-family:diag_b;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+    </tr>
+
+    <tr>
       <td><code onclick="copyTab(this)">sig</code></td>
-      <td><span style="font-family:sig; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:sig;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">sneak</code></td>
-      <td><span style="font-family:sneak; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:sneak;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">sohne</code></td>
-      <td><span style="font-family:sohne; overflow-x:auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:sohne;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
     </tr>
+
+    <tr>
+      <td><code onclick="copyTab(this)">appletc</code></td>
+      <td><span style="font-family:appletc;">通教育丑低快尖草,哥当支的反承上天币榜太，报谢量落厅时人的同躲尝，瞠仓。</span></td>
+    </tr>
+
   </table>
-</div>
+  </div>
+    
     
 <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 <script>
