--- a/fg2.html
+++ b/fg2.html
@@ -42,7 +42,7 @@
         align-items: flex-start; 
         justify-content: center;
         height: 100vh;
-        overflow: hidden; 
+        overflow-x: hidden; 
         padding: 0 5vw 0;
     }
 
@@ -150,8 +150,8 @@
 </style>
 </head>
 <body>
-<p style="font-size: xx-large; font-family: sig;">fonts studio</p> <!-- Title for the gallery -->
-
+<p style="font-size: xx-large; font-family: sig; margin:0px 0px .5vh">fonts studio</p> <!-- Title for the gallery -->
+<a href="https://xolyn.github.io/fontcss" style="margin:0px 0px 2.5vh; font-size: x-small;" class="btma">Try featured fonts in your website by simply linking font.css! <span style="font-family: sfr;">&rarr;</span></a>
 <div class="gallery">
 
     <a  class="item" href="fg/sohne.html">
@@ -192,7 +192,7 @@
 
           
 </div>
-<br><a href="https://xolyn.github.io/fontcss" class="btma">Try my fonts by linking font.css in HTML! <span style="font-family: sfr;">&rarr;</span></a>
+<!-- <br> -->
 <!-- <a style="font-family: Neue Haas Grotesk Text Pro" href="javascript: history.back()">
     <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="5vh" height="5vh" fill="none" viewBox="0 0 24 24">
     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14M5 12l4-4m-4 4 4 4"/>
