--- a/fg2.html
+++ b/fg2.html
@@ -42,7 +42,7 @@
         align-items: flex-start; 
         justify-content: center;
         height: 100vh;
-        overflow-x: hidden; 
+        overflow: hidden; 
         padding: 0 5vw 0;
     }
 
