--- a/cyb.html
+++ b/cyb.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>can u believe?</title>
 </head>
-<body>
+<body style="font-family: sans-serif;">
 <h1>can you believe this?</h1>
 <h2>crazy uses of list comprehension:</h2>
 <h3>1.</h3>
