--- a/port.html
+++ b/port.html
@@ -52,7 +52,7 @@
         <details><summary>CS5780</summary>
         <ul>
         <li onclick="document.getElementById('pdf').src='files/5780hw1.pdf'">hw1</li>
-        <li onclick="document.getElementById('pdf').src='files/5780hw2.pdf'">hw2</li>
+        <li onclick="document.getElementById('pdf').src='https://f.xoy.one/files/5780hw2.pdf'">hw2</li>
         <li onclick="document.getElementById('pdf').src='files/5780hw3.pdf'">hw3</li>
         <li onclick="document.getElementById('pdf').src='files/5780hw5.pdf'">hw5</li>
         <li onclick="document.getElementById('pdf').src='files/5780hw6.pdf'">hw6</li>
@@ -75,7 +75,7 @@
 
 
    <div style="text-align: center;">
-<iframe height="100%" width="100%" id="pdf" style="width:90%; height:100vh; padding-top: 3vh; border:none;" src="files/5780hw1.pdf"> </iframe> 
+<iframe id="pdf" style="width:90%; height:100vh; padding-top: 3vh; border:none;" src="files/5780hw1.pdf"> </iframe> 
 </div>
 
 <!-- <script>
