--- a/iframe.html
+++ b/iframe.html
@@ -6,8 +6,22 @@
     <title>iframe test</title>
 </head>
 <body>
-    <div style="text-align: center;">
-    <iframe style="height: 90vh; width: 90vw;" src="http://docs.google.com/gview?url=https://f.xoy.one/files/5780hw3.pdf&embedded=true" frameborder="0" id="myiframe" style="height:100%; width:100%;">
-    </iframe></div>
+    <!-- <div style="text-align: center;">
+        <iframe style="height: 90vh; width: 90vw;" src="http://docs.google.com/gview?url=https://f.xoy.one/files/5780hw3.pdf&embedded=true" frameborder="0" id="myiframe" style="height:100%; width:100%;">
+    </iframe></div> -->
+<h1>Lorem ipsum dolor sit amet.</h1>
+    <div id="adobe-dc-view"></div>
+ <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+ <script type="text/javascript">
+    document.addEventListener("adobe_dc_view_sdk.ready", function()
+    {
+        var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
+        adobeDCView.previewFile(
+       {
+          content:   {location: {url: "https://f.xoy.one/files/5780hw3.pdf"}},
+          metaData: {fileName: "hw.pdf"}
+       });
+    });
+ </script>
 </body>
 </html>
