--- a/iframe.html
+++ b/iframe.html
@@ -15,7 +15,7 @@
  <script type="text/javascript">
     document.addEventListener("adobe_dc_view_sdk.ready", function()
     {
-        var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
+        var adobeDCView = new AdobeDC.View({clientId: "aec8eace9e4d4270acb9a937b5815cf4", divId: "adobe-dc-view"});
         adobeDCView.previewFile(
        {
           content:   {location: {url: "https://f.xoy.one/files/5780hw3.pdf"}},
