--- a/port.html
+++ b/port.html
@@ -12,7 +12,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); */
 
 body{
-    font-family:sohne;
+    font-family:sf_r;
     margin:unset
     }
 
@@ -25,7 +25,6 @@ body{
     border-top: 1.5px black solid;
     position: sticky; /*important*/
     top: 0;
-    font-size: x-large;
     }
 
     div.nav a {
@@ -43,20 +42,27 @@ body{
         margin: 0vw 2vw 0vw;
     }
 
-    ul{
-        margin: 0;
-    }
+    div.nav details>summary{font-size: x-large;}
+
+    ul{ margin: 0; }
 
     li,details>summary{
         cursor: pointer;
     }
+
+    a{
+        color:grey; 
+        transition: .3s;
+    }
+
+    a:hover{ color:inherit; }
 
     </style>
 </head>
 <body>
 
 <div style="margin: 2vh 0vh .5vh 2vw; font-size: 3rem;">Portfolio</div>
-<div style="margin: 1vh 0vh 2vh 2vw;font-size: xx-small;">Special thanks <a href="https://opensource.adobe.com/pdfembed-sdk-docs/">Adobe's solution</a> to embed PDFs on Webkit Browser</div>
+<div style="margin: 1vh 0vh 2vh 2vw;font-size: xx-small;">Special thanks <a href="https://opensource.adobe.com/pdfembed-sdk-docs/">Adobe's solution</a> to embed PDFs on Webkit Browsers</div>
      <div class="nav" translate="no">
      <!--   <details><summary class="">CS5780</summary>
         <ul>
@@ -106,7 +112,7 @@ body{
       <div id="prompt" style="text-align: center; padding-top: 30vh; display: block; color:gray">Select a file from above to view.</div>
     <div id="adobe-dc-view"></div>
 
-<a style="background-color: rgba(211,211,211,0.8); font-family:sohne; position: fixed; bottom: 2%; right:2%; border-radius: 50%; width: 60px; line-height: 60px; text-align: center;text-decoration: none;color: black;" href="javascript:window.scrollTo({top:0,behavior:'smooth'})">&uarr;</a>
+<a style="background-color: rgba(211,211,211,0.8); font-family:sf_r; position: fixed; bottom: 2%; right:2%; border-radius: 50%; width: 60px; line-height: 60px; text-align: center;text-decoration: none;color: black;" href="javascript:window.scrollTo({top:0,behavior:'smooth'})">&uarr;</a>
 
 <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
 
