--- a/proj.html
+++ b/proj.html
@@ -137,7 +137,7 @@
 
     <div class="proj" >
         <div class="thumbnail">
-            <img src="https://i.ibb.co/ryXZf9D/blur-edges-1.jpg">
+            <img src="https://f.xoy.one/assets/b2p.jpg">
         </div>
         <div class="desc">
             <p style="font-size: large;">beamer2ppt</p>
