--- a/port.html
+++ b/port.html
@@ -28,9 +28,13 @@
     div.nav details {
         transition: .5s;
         display: inline-block;
-        padding: 2px 0px 2px 0px;
+        padding: 5px 0px 2px 0px;
         vertical-align: text-top; /*important*/
         margin: 0vw 1vw 0vw 3vh;
+    }
+
+    div.nav details:last-child{
+        padding-right: 3vh;
     }
 
     div.nav details>summary{font-size: x-large;}
